...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinearLayoutMenu"
    android:contentDescription="linear_layout_menu">

    <LinearLayout
        android:id="@+id/add_counter"
        android:theme="@style/DrawerSelectTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="add_counter_linear_layout"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
...
