...
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/decrementButton"
        style="@style/decrement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="decrementButton"
        android:elevation="20dp"
        android:text="@string/minus" />

    <Button
        android:id="@+id/incrementButton"
        style="@style/increment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/decrementButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
...
